--- a/index.html
+++ b/index.html
@@ -160,11 +160,11 @@
         <div class="tab-pane fade" id="nav-wedding-party" role="tabpanel" aria-labelledby="nav-wedding-party-tab">
             <div class="container text-center">
                 <h1 class="heading-secondary">Wedding Party</h1>
-                <img class="flower-boquet" src="/images/flower-boquet-transparent.png"> 
+                <img loading="lazy" class="flower-boquet" src="/images/flower-boquet-transparent.png"> 
                 <div class="container">
                     <div class="row reveal">
                         <div class="col-lg-5">
-                            <img class="img-fluid rounded-circle" src="images/wedding-party-tab/jessy.jpg">
+                            <img loading="lazy" class="img-fluid rounded-circle" src="images/wedding-party-tab/jessy.jpg">
                         </div>
                         <div class="col-lg-7">
                             <h1>Jessy Hosken</h1>
@@ -174,7 +174,7 @@
                     </div>
                     <div class="row reveal">
                         <div class="col-lg-5">
-                            <img class="img-fluid rounded-circle" src="/images/wedding-party-tab/angelita.jpg">
+                            <img loading="lazy" class="img-fluid rounded-circle" src="/images/wedding-party-tab/angelita.jpg">
                         </div>
                         <div class="col-lg-7">
                             <h1>Angelita Hernandez</h1>
@@ -184,7 +184,7 @@
                     </div>
                     <div class="row reveal">
                         <div class="col-lg-5">
-                            <img class="img-fluid rounded-circle" src="/images/wedding-party-tab/johnathan.jpg">
+                            <img loading="lazy" class="img-fluid rounded-circle" src="/images/wedding-party-tab/johnathan.jpg">
                         </div>
                         <div class="col-lg-7">
                             <h1>Jonathan Ieng</h1>
@@ -200,7 +200,7 @@
                             <p>Matt and I grew up as your typical brother tag team duo! Always hanging out together, always playing games together, always getting into trouble together... I haven't always been the nicest bigger brother, but even as we grew up and our personalities matured into who were are now, we're still there for each other (and we still play video games). I know Matt will support me through thick and thin — just as he's done when we were kids, as well as now, as my best man. </p>
                         </div>
                         <div class="col-lg-5 order-first order-lg-last">
-                            <img class="img-fluid rounded-circle" src="/images/wedding-party-tab/matt.jpg">
+                            <img loading="lazy" class="img-fluid rounded-circle" src="/images/wedding-party-tab/matt.jpg">
                         </div>
                     </div>
                     <div class="row reveal">
@@ -210,7 +210,7 @@
                             <p>I first met Keegan in middle school, but I only knew him as the "french horn boy". Ironically, he knew <em>me</em> as the single "flute boy" of the band. But our friendship only really flourished in high school, where we both were a part of the tennis team, a number of classes, <em>some</em> study sessions, but mostly playing League of Legends every night after school. As we went to UW, we were freshman roommates, then housemates, where we made great memories. I'm so glad he's one of my groomsmen!</p>
                         </div>
                         <div class="col-lg-5 order-first order-lg-last">
-                            <img class="img-fluid rounded-circle" src="/images/wedding-party-tab/keegan.jpg">
+                            <img loading="lazy" class="img-fluid rounded-circle" src="/images/wedding-party-tab/keegan.jpg">
                         </div>
                     </div>
                     <div class="row reveal">
@@ -220,7 +220,7 @@
                             <p>Neal went to my high school where we initially met through playing Magic the Gathering (MTG)  and video games together. We quickly became friends starting up at UW, being the other housemate with Keegan and I on our renovated basement floor of our college house. We've made countless memories over the years through university, his own wedding, and continued game nights. Neal's been a down-to-earth yet comedic friend, and I always know he's got my back. As I like to say, out of all the Neal Brown's of the world, he's the Neal Browniest!</p>
                         </div>
                         <div class="col-lg-5 order-first order-lg-last">
-                            <img class="img-fluid rounded-circle" src="/images/wedding-party-tab/neal.jpg">
+                            <img loading="lazy" class="img-fluid rounded-circle" src="/images/wedding-party-tab/neal.jpg">
                         </div>
                     </div>
                 </div>
@@ -233,47 +233,47 @@
                 <div class="row">
                     <div class="col-md-4">
                         <a data-fslightbox href="/images/images-tab/1.JPG">
-                            <img class="img-fluid my-4" src="/images/images-tab/1.JPG">
+                            <img loading="lazy" class="img-fluid my-4" src="/images/images-tab/1.JPG">
                         </a>
                         <a data-fslightbox href="/images/images-tab/9.JPG">
-                            <img class="img-fluid my-4" src="/images/images-tab/9.JPG">
+                            <img loading="lazy" class="img-fluid my-4" src="/images/images-tab/9.JPG">
                         </a>
                         <a data-fslightbox href="/images/images-tab/7.JPG">
-                            <img class="img-fluid my-4" src="/images/images-tab/7.JPG">
+                            <img loading="lazy" class="img-fluid my-4" src="/images/images-tab/7.JPG">
                         </a>
                         <a data-fslightbox href="/images/images-tab/10.JPG">
-                            <img class="img-fluid my-4" src="/images/images-tab/10.JPG">
+                            <img loading="lazy" class="img-fluid my-4" src="/images/images-tab/10.JPG">
                         </a>
                     </div>
                     <div class="col-md-4">
                         <a data-fslightbox href="/images/images-tab/2.JPG">
-                            <img class="img-fluid my-4" src="/images/images-tab/2.JPG">
+                            <img loading="lazy" class="img-fluid my-4" src="/images/images-tab/2.JPG">
                         </a>
                         <a data-fslightbox href="/images/images-tab/5.jpg">
-                            <img class="img-fluid my-4" src="/images/images-tab/5.jpg">
+                            <img loading="lazy" class="img-fluid my-4" src="/images/images-tab/5.jpg">
                         </a>
                         <a data-fslightbox href="/images/images-tab/8.JPG">
-                            <img class="img-fluid my-4" src="/images/images-tab/8.JPG">
+                            <img loading="lazy" class="img-fluid my-4" src="/images/images-tab/8.JPG">
                         </a>
                         <a data-fslightbox href="/images/images-tab/11.JPG">
-                            <img class="img-fluid my-4" src="/images/images-tab/11.JPG">
+                            <img loading="lazy" class="img-fluid my-4" src="/images/images-tab/11.JPG">
                         </a>
                         <a data-fslightbox href="/images/images-tab/13.jpg">
-                            <img class="img-fluid my-4" src="/images/images-tab/13.jpg">
+                            <img loading="lazy" class="img-fluid my-4" src="/images/images-tab/13.jpg">
                         </a>
                     </div>
                     <div class="col-md-4">
                         <a data-fslightbox href="/images/images-tab/3.jpg">
-                            <img class="img-fluid my-4" src="/images/images-tab/3.jpg">
+                            <img loading="lazy" class="img-fluid my-4" src="/images/images-tab/3.jpg">
                         </a>
                         <a data-fslightbox href="/images/images-tab/6.jpg">
-                            <img class="img-fluid my-4" src="/images/images-tab/6.jpg">
+                            <img loading="lazy" class="img-fluid my-4" src="/images/images-tab/6.jpg">
                         </a>
                         <a data-fslightbox href="/images/images-tab/4.jpg">
-                            <img class="img-fluid my-4" src="/images/images-tab/4.jpg">
+                            <img loading="lazy" class="img-fluid my-4" src="/images/images-tab/4.jpg">
                         </a>
                         <a data-fslightbox href="/images/images-tab/12.JPG">
-                            <img class="img-fluid my-4" src="/images/images-tab/12.JPG">
+                            <img loading="lazy" class="img-fluid my-4" src="/images/images-tab/12.JPG">
                         </a>
                     </div>
                 </div>
@@ -281,56 +281,56 @@
                 <div class="row">
                     <div class="col-md-4">
                         <a data-fslightbox href="/images/images-tab/selfies/1.JPG">
-                            <img class="img-fluid my-4" src="/images/images-tab/selfies/1.JPG">
+                            <img loading="lazy" class="img-fluid my-4" src="/images/images-tab/selfies/1.JPG">
                         </a>
                         <a data-fslightbox href="/images/images-tab/selfies/9.JPG">
-                            <img class="img-fluid my-4" src="/images/images-tab/selfies/9.JPG">
+                            <img loading="lazy" class="img-fluid my-4" src="/images/images-tab/selfies/9.JPG">
                         </a>
                         <a data-fslightbox href="/images/images-tab/selfies/7.JPG">
-                            <img class="img-fluid my-4" src="/images/images-tab/selfies/7.JPG">
+                            <img loading="lazy" class="img-fluid my-4" src="/images/images-tab/selfies/7.JPG">
                         </a>
                         <a data-fslightbox href="/images/images-tab/selfies/10.JPG">
-                            <img class="img-fluid my-4" src="/images/images-tab/selfies/10.JPG">
+                            <img loading="lazy" class="img-fluid my-4" src="/images/images-tab/selfies/10.JPG">
                         </a>
                         <a data-fslightbox href="/images/images-tab/selfies/14.JPG">
-                            <img class="img-fluid my-4" src="/images/images-tab/selfies/14.JPG">
+                            <img loading="lazy" class="img-fluid my-4" src="/images/images-tab/selfies/14.JPG">
                         </a>
                     </div>
                     <div class="col-md-4">
                         <a data-fslightbox href="/images/images-tab/selfies/2.jpg">
-                            <img class="img-fluid my-4" src="/images/images-tab/selfies/2.jpg">
+                            <img loading="lazy" class="img-fluid my-4" src="/images/images-tab/selfies/2.jpg">
                         </a>
                         <a data-fslightbox href="/images/images-tab/selfies/5.jpg">
-                            <img class="img-fluid my-4" src="/images/images-tab/selfies/5.jpg">
+                            <img loading="lazy" class="img-fluid my-4" src="/images/images-tab/selfies/5.jpg">
                         </a>
                         <a data-fslightbox href="/images/images-tab/selfies/8.jpg">
-                            <img class="img-fluid my-4" src="/images/images-tab/selfies/8.jpg">
+                            <img loading="lazy" class="img-fluid my-4" src="/images/images-tab/selfies/8.jpg">
                         </a>
                         <a data-fslightbox href="/images/images-tab/selfies/11.JPG">
-                            <img class="img-fluid my-4" src="/images/images-tab/selfies/11.JPG">
+                            <img loading="lazy" class="img-fluid my-4" src="/images/images-tab/selfies/11.JPG">
                         </a>
                         <a data-fslightbox href="/images/images-tab/selfies/13.JPG">
-                            <img class="img-fluid my-4" src="/images/images-tab/selfies/13.JPG">
+                            <img loading="lazy" class="img-fluid my-4" src="/images/images-tab/selfies/13.JPG">
                         </a>
                         <a data-fslightbox href="/images/images-tab/selfies/16.jpg">
-                            <img class="img-fluid my-4" src="/images/images-tab/selfies/16.jpg">
+                            <img loading="lazy" class="img-fluid my-4" src="/images/images-tab/selfies/16.jpg">
                         </a>
                     </div>
                     <div class="col-md-4">
                         <a data-fslightbox href="/images/images-tab/selfies/3.jpg">
-                            <img class="img-fluid my-4" src="/images/images-tab/selfies/3.jpg">
+                            <img loading="lazy" class="img-fluid my-4" src="/images/images-tab/selfies/3.jpg">
                         </a>
                         <a data-fslightbox href="/images/images-tab/selfies/6.JPG">
-                            <img class="img-fluid my-4" src="/images/images-tab/selfies/6.JPG">
+                            <img loading="lazy" class="img-fluid my-4" src="/images/images-tab/selfies/6.JPG">
                         </a>
                         <a data-fslightbox href="/images/images-tab/selfies/4.jpg">
-                            <img class="img-fluid my-4" src="/images/images-tab/selfies/4.jpg">
+                            <img loading="lazy" class="img-fluid my-4" src="/images/images-tab/selfies/4.jpg">
                         </a>
                         <a data-fslightbox href="/images/images-tab/selfies/12.JPG">
-                            <img class="img-fluid my-4" src="/images/images-tab/selfies/12.JPG">
+                            <img loading="lazy" class="img-fluid my-4" src="/images/images-tab/selfies/12.JPG">
                         </a>
                         <a data-fslightbox href="/images/images-tab/selfies/15.jpg">
-                            <img class="img-fluid my-4" src="/images/images-tab/selfies/15.jpg">
+                            <img loading="lazy" class="img-fluid my-4" src="/images/images-tab/selfies/15.jpg">
                         </a>
                     </div>
                 </div>
