fix format and text of wedding color faq

--- a/index.html
+++ b/index.html
@@ -360,11 +360,11 @@
                     </div>
                     <div class="col-2"></div>
                 </div>
-                <div>
+                <div class="row">
                     <div class="col-2"></div>
                     <div class="col-4 border-right question"><span>Do you have wedding colors?</span></div>
                     <div class="col-4 answer">
-                    Our main color is dusty blue. Other colors we've chosen are navy blue, ivory/off white, and sage green. Please note however that there is no color dress code, so do not feel pressured to wear something that matches these shades. 
+                    Our main color is dusty blue. Other colors we've chosen are navy blue, ivory/off white, and sage green. Please note however that there is no color dress code, so you do not need to wear something that matches these shades. 
                     </div>
                     <div class="col-2"></div>
                 </div>
