Simplify tab names and tab linking

--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
     </div>
     <nav>
         <div class="nav nav-tabs pt-0" id="nav-tab" role="tablist">
-            <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">Home</a>
-            <a class="nav-item nav-link" id="nav-schedule-tab" data-toggle="tab" href="#nav-schedule" role="tab" aria-controls="nav-home" aria-selected="false">Schedule</a>
-            <a class="nav-item nav-link" id="nav-wedding-party-tab" data-toggle="tab" href="#nav-wedding-party" role="tab" aria-controls="nav-home" aria-selected="false">Wedding Party</a>
-            <a class="nav-item nav-link" id="nav-photos-tab" data-toggle="tab" href="#nav-photos" role="tab" aria-controls="nav-home" aria-selected="false">Photos</a>
-            <a class="nav-item nav-link" id="nav-questions-tab" data-toggle="tab" href="#nav-questions" role="tab" aria-controls="nav-home" aria-selected="false">Questions</a>
-            <a class="nav-item nav-link" id="nav-registry-tab" data-toggle="tab" href="#nav-registry" role="tab" aria-controls="nav-home" aria-selected="false">Registry</a>
-            <a class="nav-item nav-link" id="nav-rsvp-tab" data-toggle="tab" href="#nav-rsvp" role="tab" aria-controls="nav-home" aria-selected="false">RSVP</a>
+            <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="nav-home" aria-selected="true">Home</a>
+            <a class="nav-item nav-link" id="nav-schedule-tab" data-toggle="tab" href="#schedule" role="tab" aria-controls="nav-home" aria-selected="false">Schedule</a>
+            <a class="nav-item nav-link" id="nav-wedding-party-tab" data-toggle="tab" href="#wedding-party" role="tab" aria-controls="nav-home" aria-selected="false">Wedding Party</a>
+            <a class="nav-item nav-link" id="nav-photos-tab" data-toggle="tab" href="#photos" role="tab" aria-controls="nav-home" aria-selected="false">Photos</a>
+            <a class="nav-item nav-link" id="nav-questions-tab" data-toggle="tab" href="#questions" role="tab" aria-controls="nav-home" aria-selected="false">Questions</a>
+            <a class="nav-item nav-link" id="nav-registry-tab" data-toggle="tab" href="#registry" role="tab" aria-controls="nav-home" aria-selected="false">Registry</a>
+            <a class="nav-item nav-link" id="nav-rsvp-tab" data-toggle="tab" href="#rsvp" role="tab" aria-controls="nav-home" aria-selected="false">RSVP</a>
         </div>
     </nav>
     <div class="tab-content">
-        <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
+        <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="nav-home-tab">
             <!--<div class="jumbotron home-page-hero has-image"></div>-->
             <img class="d-block mx-auto img-fluid" src="/images/banner.jpg" width=1200>
             <h2 class="heading-secondary text-center mt-3">Our Story</h2>
@@ -92,7 +92,7 @@
                 </div>
             </div>
         </div>
-        <div class="tab-pane fade" id="nav-schedule" role="tabpanel" aria-labelledby="nav-schedule-tab">
+        <div class="tab-pane fade" id="schedule" role="tabpanel" aria-labelledby="nav-schedule-tab">
             <div class="container text-center">
                 <h1 class="heading-secondary">Schedule</h1>
                 <img class="flower-boquet" src="/images/flower-boquet-transparent.png"> 
@@ -141,7 +141,7 @@
                 </div>
             </div>
         </div>
-        <div class="tab-pane fade" id="nav-registry" role="tabpanel" aria-labelledby="nav-registry-tab">
+        <div class="tab-pane fade" id="registry" role="tabpanel" aria-labelledby="nav-registry-tab">
             <div class="container text-center">
                 <h1 class="heading-secondary">Registry</h1>
                 <img class="flower-boquet" src="/images/flower-boquet-transparent.png"> 
@@ -157,7 +157,7 @@
                 </div>
             </div>
         </div>
-        <div class="tab-pane fade" id="nav-wedding-party" role="tabpanel" aria-labelledby="nav-wedding-party-tab">
+        <div class="tab-pane fade" id="wedding-party" role="tabpanel" aria-labelledby="nav-wedding-party-tab">
             <div class="container text-center">
                 <h1 class="heading-secondary">Wedding Party</h1>
                 <img loading="lazy" class="flower-boquet" src="/images/flower-boquet-transparent.png"> 
@@ -226,7 +226,7 @@
                 </div>
             </div>
         </div>
-        <div class="tab-pane fade" id="nav-photos" role="tabpanel" aria-labelledby="nav-photos-tab">
+        <div class="tab-pane fade" id="photos" role="tabpanel" aria-labelledby="nav-photos-tab">
             <div class="container text-center">
                 <h1 class="heading-secondary">Photos</h1>
                 <img class="flower-boquet" src="/images/flower-boquet-transparent.png"> 
@@ -336,7 +336,7 @@
                 </div>
             </div>
         </div>
-        <div class="tab-pane fade" id="nav-questions" role="tabpanel" aria-labelledby="nav-questions-tab">
+        <div class="tab-pane fade" id="questions" role="tabpanel" aria-labelledby="nav-questions-tab">
             <div class="container text-center">
                 <h1 class="heading-secondary">Questions</h1>
                 <img class="flower-boquet" src="/images/flower-boquet-transparent.png"> 
@@ -400,7 +400,7 @@
                 </div>
             </div>
         </div>
-        <div class="tab-pane fade" id="nav-rsvp" role="tabpanel" aria-labelledby="nav-rsvp-tab">
+        <div class="tab-pane fade" id="rsvp" role="tabpanel" aria-labelledby="nav-rsvp-tab">
             <div class="container text-center">
                 <h1 class="heading-secondary">RSVP</h1>
                 <img class="flower-boquet" src="/images/flower-boquet-transparent.png"> 
@@ -422,5 +422,6 @@
     </div>
     <script src="/scripts/fslightbox.js"></script>
     <script type="module" src="/scripts/rsvp.js"></script>
+    <script type="module" src="/scripts/load-tab.js"></script>
 </body>
 </html>
