--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 </div>
                 <div class="row">
                     <div class="col">
-                        <img width="100" alt="Heart icon" src="/images/heart-icon.png">sssssssssss
+                        <img width="100" alt="Heart icon" src="/images/heart-icon.png">
                         <p class="h1">Ceremony</p>
                         <p>4:00 - 4:30 P.M.</p>
                     </div>
