Update registry text and RSVP faq

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             <div class="container text-center">
                 <h1 class="heading-secondary">Registry</h1>
                 <img class="flower-boquet" alt="flower boquet" src="/images/flower-boquet-transparent.png"> 
-                <p>We're still putting together our registry list, but we appreciate you checking in!<br>Please stay tuned for more registry details. Thank you!</p>
+                <p>While your presence on our special day is already a gift, if you'd like view our registry, please see the Amazon Registry link below.</p>
                 <div class="row">
                     <div class="mx-auto col-sm-6 col-md-4 col-xl-3 col-xxxl-2">
                         <a href="https://www.amazon.com/wedding/mitchell-francisco-janine-ikeda-snohomish-july-2023/registry/3LX4O1NN9QFHV" target="_blank" class="d-flex align-self-center justify-content-center">
@@ -343,7 +343,7 @@
                 <div class="row">
                     <div class="col-2"></div>
                     <div class="col-4 border-right question"><span>When should I RSVP by?</span></div>
-                    <div class="col-4 answer">Please RSVP no later than 6/3/2023. If you are unable to respond by then we will assume you can't make it.</div>
+                    <div class="col-4 answer">Please RSVP no later than 5/31/2023. If you are unable to respond by then we will assume you can't make it.</div>
                     <div class="col-2"></div>
                 </div>
                  <div class="row">
