--- a/index.html
+++ b/index.html
@@ -411,11 +411,9 @@
             <div class="container text-center">
                 <h1 class="heading-secondary">RSVP</h1>
                 <img class="flower-boquet" alt="flower boquet" src="/images/flower-boquet-transparent.png"> 
-                <p>You'll be able to RSVP on this page once formal invitations have been sent out. Thanks for checking in!</p>
-                <!--
-                <p>If you're responding for you and your family or a guest,<br>you'll be able to RSVP for your entire group.</p>-->
+                <p>If you're responding for you and your family or a guest,<br>you'll be able to RSVP for your entire group.</p>
                 <div class="alert alert-info d-none" role="alert"></div>
-                <form class="form-inline centered d-none">
+                <form class="form-inline centered">
                     <div class="form-group mx-sm-3 mb-2">
                       <label for="firstName" class="sr-only">First name</label>
                       <input type="text" class="form-control" id="firstName" placeholder="First Name">
