Add honeymood fund paypal link

--- a/index.html
+++ b/index.html
@@ -145,19 +145,26 @@
             <div class="container text-center">
                 <h1 class="heading-secondary">Registry</h1>
                 <img class="flower-boquet" alt="flower boquet" src="/images/flower-boquet-transparent.png"> 
-                <p>While your presence on our special day is already a gift, if you'd like view our registry, please see our Amazon and Costco Registry links below. Thank you!</p>
+                <p>While your presence on our special day is already a gift, if you'd like view our registries, please see the links below. Thank you!</p>
                 <div class="row">
-                    <div class="mx-auto col-sm-6">
+                    <div class="mx-auto col-sm-4">
                         <a href="https://www.amazon.com/wedding/mitchell-francisco-janine-ikeda-snohomish-july-2023/registry/3LX4O1NN9QFHV" target="_blank" class="d-flex align-self-center justify-content-center">
                             <div class="align-self-center ms-2">
                                 <img class="mw-100 rounded full-logo" alt="Amazon registry logo" src="/images/amazon-registry.png">
                             </div>
                         </a>
                     </div>
-                    <div class="mx-auto col-sm-6">
+                    <div class="mx-auto col-sm-4">
                         <a href="https://www.myregistry.com/wedding-registry/janine-ikeda-and-mitchell-francisco-/3714634" target="_blank" class="d-flex align-self-center justify-content-center">
                             <div class="align-self-center ms-2">
                                 <img class="mw-100 rounded full-logo" alt="Amazon registry logo" src="/images/costco-registry.png">
+                            </div>
+                        </a>
+                    </div>
+                    <div class="mx-auto col-sm-4">
+                        <a href="https://www.paypal.me/mitchellfrancisco" target="_blank" class="d-flex align-self-center justify-content-center">
+                            <div class="align-self-center ms-2">
+                                <img class="mw-100 rounded full-logo" alt="Amazon registry logo" src="/images/honeymoon-fund.png">
                             </div>
                         </a>
                     </div>
