Prepare RSVP deadline text

--- a/index.html
+++ b/index.html
@@ -419,6 +419,10 @@
                 <h1 class="heading-secondary">RSVP</h1>
                 <img class="flower-boquet" alt="flower boquet" src="/images/flower-boquet-transparent.png"> 
                 <p>If you're responding for you and your family or a guest,<br>you'll be able to RSVP for your entire group.</p>
+                <div class="d-none">
+                <p>All RSVPs have been received as of 5/31/2023. Thank you for submitting your RSVP!</p>
+                <p>If any changes to your RSVP come up, please contact Janine or Mitchell as soon as possible.</p>
+                </div>
                 <div class="alert alert-info d-none" role="alert"></div>
                 <form class="form-inline centered">
                     <div class="form-group mx-sm-3 mb-2">
