Add photo and farewell message

--- a/index.html
+++ b/index.html
@@ -34,11 +34,15 @@
             <a class="nav-item nav-link" id="nav-registry-tab" data-toggle="tab" href="#registry" role="tab" aria-controls="registry" aria-selected="false">Registry</a>
             <a class="nav-item nav-link" id="nav-rsvp-tab" data-toggle="tab" href="#rsvp" role="tab" aria-controls="rsvp" aria-selected="false">RSVP</a>
         </div>
-    </nav>
+    </nav>    
     <div class="tab-content">
         <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="nav-home-tab">
             <!--<div class="jumbotron home-page-hero has-image"></div>-->
-            <img class="d-block mx-auto img-fluid" alt="Mitch and Janine smiling together" src="/images/banner.jpg" width=1200>
+            <div class="alert mx-auto w-50 alert-primary" role="alert">
+                Mitchell and Janine's wedding took place on a beautiful, warm, sunny day on July 8th, 2023. 
+                For all of those who attended, thank you for being a part of our journey. Your presence and well wishes made our wedding day even more special, and we are forever grateful.
+            </div>
+            <img class="d-block mx-auto img-fluid" alt="wedding kiss" src="/images/wedding-kiss.jpg" width=1200>
             <h2 class="heading-secondary text-center mt-3">Our Story</h2>
             <div class="timeline">
                 <div class="timeline-container left reveal">
